[tool.poetry]
name = "browseruse"
version = "0.1.0"
description = ""
authors = ["james <james@mercstudio.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
browser-use = "^0.1.16"
langchain-openai = "^0.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

